# flet-template-repo

./: build.sh  pyproject.toml  test.py
src/: main.py
